# ScreenQRReader-2

./: README.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build.yml
src/: cropping.ts  keymap.ts  main.ts  shortcut_config.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: cropping.json  shortcut_config.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  config.rs  lib.rs  main.rs  shortcut.rs  tray.rs  update.rs  window.rs
src-tauri/src/platform/: mac.rs
