[package]
name = "screenqrreader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenqrreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.5.0"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1.45.1", features = ["time"] }
tauri-plugin-os = "2"
zbar-rust = "0.0.24"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.1", features = ["NSError"] }
objc2-user-notifications = { version = "0.3.1", features = [
    "UNNotificationResponse",
    "UNNotificationRequest",
    "UNNotificationContent",
] }
block2 = "0.6.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[profile.dev]
opt-level = 1
overflow-checks = false
